kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecommerce
  name: ecommerce-backend
  labels:
    app: ecommerce-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ecommerce-backend
  template:
    metadata:
      labels:
        app: ecommerce-backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "3000"
    spec:
      containers:
      - name: ecommerce-backend
        image:  ghcr.io/felixopk/ecommerce-backend:v1.8.0
        imagePullPolicy: Always
        ports:
        - containerPort: 3000

        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10

        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5

      imagePullSecrets:
      - name: ghcr-secret
