kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ecommerce
  name: ecommerce-frontend
  labels:
    app: ecommerce-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ecommerce-frontend
  template:
    metadata:
      labels:
        app: ecommerce-frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/felixopk/ecommerce-frontend:1.8.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets :
        - name: ghcr-secret
