kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ecommerce
  name: ecommerce-frontend
spec:
  selector:
    app: ecommerce-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
